--- a/src/styles/features/_serviceProblem.scss
+++ b/src/styles/features/_serviceProblem.scss
@@ -1,14 +1,6 @@
 @use "../cofigs/vars" as v;
 
 .service-problem {
-  // position: relative;
-  // width: 100%;
-  // height: 100vh;
-
-  .s-section__content {
-    display: grid;
-    grid-template-rows: auto auto;
-  }
 
 
   // Main Grid
@@ -23,7 +15,6 @@
       grid-template-columns: 1fr auto 1fr;
       gap: v.$spacing-xl;
       align-items: stretch;
-      max-height: 60vh;
     }
   }
 
@@ -34,6 +25,7 @@
     gap: v.$spacing-md;
     flex-shrink: 0;
     order: 1;
+    height: 50vh;
 
     @include v.desktop {
       grid-template-columns: 1fr;
@@ -207,13 +199,12 @@
     overflow: auto;
     position: relative;
     order: 3;
-    min-height: 20vh;
+    height: 20vh;
     flex: 1;
 
     @include v.desktop {
       order: 3;
-      height: 100%;
-      min-height: 40vh;
+      height: 50vh;
     }
   }
 
