--- a/src/styles/features/_serviceProcess.scss
+++ b/src/styles/features/_serviceProcess.scss
@@ -30,7 +30,7 @@
     }
 
     &--second {
-      flex-direction: column;
+      flex-direction: column-reverse;
 
       @include v.desktop {
         flex-direction: row;
@@ -132,17 +132,19 @@
     justify-content: center;
     position: relative;
 
+
     svg {
       position: absolute;
       color: v.$primary;
       opacity: 0;
-      transition: opacity 0.3s ease;
+      transition: opacity 0.3s ease 0.3s;
     }
 
     &::before {
       content: '';
       position: absolute;
-      background-color: rgba(v.$primary, 0.3);
+      background-color: v.$primary;
+      opacity: 0.4;
       transition: width 0.6s ease, height 0.6s ease;
     }
 
@@ -168,7 +170,7 @@
       @include v.desktop {
         flex: 0 0 80px;
         width: auto;
-        height: auto;
+        height: 2px;
         margin: 0;
       }
 
@@ -199,15 +201,17 @@
       }
 
       svg {
-        top: 100%;
+        top: auto;
+        bottom: -12px;
         left: 50%;
         transform: translateX(-50%) rotate(90deg);
 
         @include v.desktop {
-          top: auto;
+          top: 50%;
+          bottom: auto;
           right: -12px;
           left: auto;
-          transform: none;
+          transform: translateY(-50%);
         }
       }
     }
@@ -220,19 +224,22 @@
         @include v.desktop {
           left: auto;
           right: 0;
+          top: 50%;
         }
       }
 
       svg {
-        top: 100%;
+        top: auto;
+        bottom: -12px;
         left: 50%;
-        transform: translateX(-50%) rotate(90deg);
+        transform: translateY(0) rotate(-90deg);
 
         @include v.desktop {
-          top: auto;
+          top: 50%;
+          bottom: auto;
           right: auto;
           left: -12px;
-          transform: none;
+          transform: translateX(0) rotate(0deg);
         }
       }
     }
@@ -269,6 +276,8 @@
       svg {
         @include v.desktop {
           bottom: -12px;
+          left: 50%;
+          transform: translateX(-50%);
         }
       }
     }
@@ -286,6 +295,8 @@
         @include v.desktop {
           top: -12px;
           bottom: auto;
+          left: 50%;
+          transform: translateX(-50%);
         }
       }
     }
