--- a/src/styles/features/index.scss
+++ b/src/styles/features/index.scss
@@ -9,3 +9,4 @@
 @use './serviceProcess' as serviceProcess;
 @use './serviceProblem' as serviceProblem;
 @use './servicePartner' as servicePartner;
+@use './serviceSystem' as serviceSystem;
