--- a/src/styles/features/index.scss
+++ b/src/styles/features/index.scss
@@ -1,12 +1,9 @@
-@use './contact' as contact;
+// @use './contact' as contact;
 @use './solutionIntro' as solutionIntro;
-@use './solutionStm' as solutionStm;
-@use './solutionAi' as solutionAi;
-@use './solutionLogistics' as solutionLogistics;
-@use './serviceCs' as serviceCs;
-@use './serviceLogistics' as serviceLogistics;
-@use './serviceCenter' as serviceCenter;
-@use './serviceProcess' as serviceProcess;
-@use './serviceProblem' as serviceProblem;
-@use './servicePartner' as servicePartner;
+// @use './serviceCs' as serviceCs;
+// @use './serviceLogistics' as serviceLogistics;
+// @use './serviceCenter' as serviceCenter;
+// @use './serviceProcess' as serviceProcess;
+// @use './serviceProblem' as serviceProblem;
+// @use './servicePartner' as servicePartner;
 @use './serviceSystem' as serviceSystem;
