--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,3 @@
-@use './cofigs/base';
+@use './configs/base';
 @use './layout/index' as layout;
 @use './ui/index' as ui;
-@use './sections/index' as sections;
-@use './features/index' as features;
