--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,4 +1,4 @@
-@use "../cofigs/vars" as v;
+@use "../configs/vars" as v;
 
 /* ============================================
    FOOTER COMPONENT (BEM)
