--- a/src/styles/ui/_field.scss
+++ b/src/styles/ui/_field.scss
@@ -1,4 +1,4 @@
-@use "../cofigs/vars" as v;
+@use "../configs/vars" as v;
 
 /* ============================================
    FORM FIELDS (Light & Dark Theme)
