--- a/src/styles/layout/index.scss
+++ b/src/styles/layout/index.scss
@@ -1,3 +1,3 @@
-@use './header' as header;
-@use './footer' as footer;
+// @use './header' as header;
+// @use './footer' as footer;
 @use './section' as section;
